minor fix: lwraft-ui loading template.
Change-Id: Ida1737867448fd246f31ff6a7ef6ffe815626777

--- a/ui/lwraft-ui/src/app/home.component.html
+++ b/ui/lwraft-ui/src/app/home.component.html
@@ -1,5 +1,5 @@
-<ng-template #loading *ngIf="!showError">
-    <div align="center" style="left:50%;top:50%">
+<ng-template #loading>
+    <div *ngIf="!showError" align="center" style="left:50%;top:50%">
         <span class="spinner">
             Loading...
         </span>
